--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Store changing state data as commits that can be rolled back",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report"
   },
   "keywords": [
     "state",
@@ -23,8 +23,14 @@
     "jsondiffpatch": "^0.1.43",
     "level-transactions": "^1.5.3",
     "msgpack-lite": "^0.1.20",
-    "old": "^0.1.3",
-    "pump": "^1.0.1",
-    "to2": "^1.0.0"
+    "old": "^0.1.3"
+  },
+  "devDependencies": {
+    "faucet": "0.0.1",
+    "levelup": "^1.3.2",
+    "memdown": "^1.2.0",
+    "nyc": "^6.6.1",
+    "standard": "^7.1.2",
+    "tape": "^4.6.0"
   }
 }
