--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Store changing state data as commits that can be rolled back",
   "main": "index.js",
   "scripts": {
-    "test": "standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report"
+    "test": "standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
+    "build": "rm -rf lib && babel --presets es2015 src -d lib",
+    "source": "rm -rf lib && ln -s src lib",
+    "prepublish": "npm run build",
+    "publish": "npm run source"
   },
   "keywords": [
     "state",
@@ -26,6 +30,8 @@
     "old": "^0.1.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "faucet": "0.0.1",
     "levelup": "^1.3.2",
     "memdown": "^1.2.0",
