Set up browser tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
+    "test-browser": "npm run build && test/browser.sh && npm run source",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
     "prepublish": "npm run build",
@@ -37,6 +38,8 @@
     "memdown": "^1.2.0",
     "nyc": "^6.6.1",
     "standard": "^7.1.2",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "zuul": "^3.10.1",
+    "zuul-ngrok": "^4.0.0"
   }
 }
